# eql

./: .gitignore  README.md  flake.nix  pyproject.toml
eql/: eval.py  evaluator.py  exceptions.py  infix.py  lexer.py  parser.py  pyeval.py  queue.py
scripts/: cli.py  eql.py
tests/: test_eql.py  test_eval.py  test_evaluator.py  test_lexer.py  test_parser.py  test_pyeval.py
