[project]
name = "eql"
version = "1.0.0"
description = "A minimalist command line calculator"
authors = [
    {name = "CalebJohn", email = "eql@calebjohn.ca"},
]
dependencies = [
    "sympy>=1.6.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
