[tool.poetry]
name = "eql"
version = "1.0.0"
description = "A minimalist command line calculator"
authors = ["CalebJohn <git@calebjohn.ca>"]
license = "MIT"
packages = [
  { include = "eql" },
  { include = "scripts" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"

[tool.poetry.extras]
sympy = ["sympy"]

[tool.poetry.scripts]
eql = "scripts.eql:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
